fix bug: background does not fit the div with: background-size: 100% 100%;

--- a/css/styles_eng.css
+++ b/css/styles_eng.css
@@ -139,6 +139,7 @@ h1 {
     cursor: pointer;
     border-radius: 10px;
     margin-bottom: 50px;
+    background-size: 100% 100%;
 }
 #about {
     width: 100%;
